Add tool calling support for LLM providers
Implement a comprehensive tool system for AI agent tool execution:

- Add BaseTool, ToolParameter, ToolResult classes for tool definitions
- Create ToolRegistry for managing and executing tools
- Implement built-in tools: DateTimeTool, CalculatorTool, WebSearchTool, MemoryStoreTool
- Add LLM provider clients with native tool support:
  - AnthropicClient (Claude)
  - OpenAIClient (OpenAI/vLLM compatible)
  - GeminiClient (Google Gemini)
  - OllamaClient (local models)
- Create factory functions for client instantiation
- Add AgentRunner service for orchestrating conversations with tools
- Support provider-specific tool format conversion (Anthropic, OpenAI, Gemini)
- Implement automatic tool execution loops with iteration limits
- Update ruff config to allow Any types in generic interfaces

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,6 +91,8 @@ ignore = [
     "ANN002",
     "ANN003",
     "ANN201",
+    "ANN401",  # Allow Any type for generic interfaces
+    "PLR0911",  # Allow many return statements in validation functions
     "ARG002",
     "ARG003",
     "C401",  # rewrite as a set comprehension
