--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,21 +1,22 @@
-name: mrvn
+name: wade
 
 services:
 
   db:
-    image: postgres:17
-    container_name: "mrvn-postgres-17"
+    image: pgvector/pgvector:pg17
+    platform: linux/amd64
+    container_name: "mrvn-pgvector-pg17"
     restart: always
     ports:
       - 5432:5432
     environment:
       POSTGRES_PASSWORD: mysecretpassword
-      POSTGRES_DB: mrvn
+      POSTGRES_DB: wade
       POSTGRES_USER: postgres
 
   localstack:
-    image: localstack/localstack:4.3.0
-    container_name: "mrvn-localstack-4.3.0"
+    image: localstack/localstack:4.12.0
+    container_name: "mrvn-localstack-4.12.0"
     ports:
       - "4566:4566"
     environment:
