--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,13 @@ dependencies = [
     # Production server
     "gunicorn>=23.0.0",
     "httpx>=0.27.0",  # HTTP client for validations
+    # API
+    "djangorestframework>=3.15.0",
+    # Vector search for memory
+    "pgvector>=0.3.0",
+    "django-postgres-extra>=2.0.0",
+    "sentence-transformers>=3.0.0",
+    "numpy>=2.0.0",
 ]
 
 [project.urls]
